tests/front_end/input/type_errors/int_float_conversion.wl
//E<5:30>: Cannot apply `+` to int and float
int main() {
    int   i =   0;
    float f = 0.0;
    /* ??? */ int result = i + f;
    return 0;
}